[tool.poetry]
name = "ghpages"
version = "0.0.1"
description = "Publish files to a gh-pages branch on GitHub"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pycommando = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
tox = "^3.25.0"
myst-parser = "^0.18.0"
sphinx-autodoc-typehints = "^1.18.3"
furo = "^2022.6.21"
sphinx-copybutton = "^0.5.0"
Sphinx = "^5.0.2"

[tool.poetry.scripts]
ghpages = "ghpages.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
